--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -70,6 +70,7 @@
 				OutputFile="$(OutDir)/bin/mapeditor2-debug.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;../../../$(ConfigurationName)/lib&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;../../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;../../../libs/paragui/VisualC/$(ConfigurationName)&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
+				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/mapeditor.pdb"
 				GenerateMapFile="true"
@@ -160,6 +161,7 @@
 				OutputFile="$(OutDir)/bin/mapeditor2.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;../../../$(ConfigurationName)/lib&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;../../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;../../../libs/paragui/VisualC/$(ConfigurationName)&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
+				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/mapeditor.pdb"
 				SubSystem="2"
