--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -73,7 +73,9 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/libcurl.dll"
   File "@inst_win32_DLL_dir@/libeay32.dll" 
   File "@inst_win32_DLL_dir@/ssleay32.dll"
-  
+  File "@inst_win32_DLL_dir@/Microsoft.VC90.CRT.manifest"
+
+
   ; Debug DLLs
   ; File "@inst_win32_DLL_dir@/sdl_sound_d.dll"
   ; File "@inst_win32_DLL_dir@/msvcr71d.dll"
