--- a/source/tools/win/mount.vcproj
+++ b/source/tools/win/mount.vcproj
@@ -72,6 +72,7 @@
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin\mount.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/Debug&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;"
+				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/mount.pdb"
 				RandomizedBaseAddress="1"
@@ -156,6 +157,7 @@
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin/mount.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;"
+				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/mount.pdb"
 				OptimizeReferences="2"
