Updated version number to 2.1.5.0  Fixed build system of weaponguide

--- a/source/tools/win/weaponguide.vcproj
+++ b/source/tools/win/weaponguide.vcproj
@@ -70,7 +70,7 @@
 				OutputFile="$(SolutionDir)\$(ConfigurationName)/bin/weaponguide.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;../../$(ConfigurationName)/lib&quot;;&quot;../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
-				AdditionalManifestDependencies="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
+				AdditionalManifestDependencies=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/weaponguide.pdb"
 				RandomizedBaseAddress="1"
@@ -156,7 +156,7 @@
 				OutputFile="$(SolutionDir)\$(ConfigurationName)/bin/weaponguide.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;../../$(ConfigurationName)/lib&quot;;&quot;../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
-				AdditionalManifestDependencies="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
+				AdditionalManifestDependencies=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/weaponguide.pdb"
 				OptimizeReferences="2"
