Fixed missing DLL in installer

--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -62,6 +62,7 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/zlib1.dll"
   File "@inst_win32_DLL_dir@/libexpat.dll"
   File "@inst_win32_DLL_dir@/libpng13.dll"
+  File "@inst_win32_DLL_dir@/libpng12-0.dll"
   File "@inst_win32_DLL_dir@/libtiff-3.dll"
   File "@inst_win32_DLL_dir@/sdl.dll"
   File "@inst_win32_DLL_dir@/README-SDL.txt"
