Updated project files

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -423,10 +423,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\messaginghub.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\misc.cpp"
 				>
 			</File>
@@ -887,6 +883,98 @@
 				</File>
 				<File
 					RelativePath="..\..\..\network\simple_file_transfer.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Actions"
+				>
+				<File
+					RelativePath="..\..\..\actions\action.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\actioncontainer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\actionresult.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\changecontainerproperty.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\changeunitmovement.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\changeunitproperty.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\changeview.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\consumeammo.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\consumeresource.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\containeraction.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\context.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\destructunit.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\inflictunitdamage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\moveunit.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\registerunitrftarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\removemine.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\spawnobject.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\unitaction.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\unitfieldregistration.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\vehicleattack.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="utils"
+				>
+				<File
+					RelativePath="..\..\..\util\messaginghub.cpp"
 					>
 				</File>
 			</Filter>
