--- a/source/tools/win/tools.vcproj
+++ b/source/tools/win/tools.vcproj
@@ -228,7 +228,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\messaginghub.cpp"
+				RelativePath="..\..\util\messaginghub.cpp"
 				>
 			</File>
 			<File
