--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -399,10 +399,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\messaginghub.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\misc.cpp"
 				>
 			</File>
@@ -699,6 +695,78 @@
 				</File>
 				<File
 					RelativePath="..\..\..\sdl\graphics.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Actions"
+				>
+				<File
+					RelativePath="..\..\..\actions\action.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\actioncontainer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\actionresult.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\changeunitmovement.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\changeunitproperty.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\changeview.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\consumeammo.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\containeraction.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\context.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\destructunit.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\inflictunitdamage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\registerunitrftarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\removemine.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\spawnobject.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\unitaction.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Utils"
+				>
+				<File
+					RelativePath="..\..\..\util\messaginghub.cpp"
 					>
 				</File>
 			</Filter>
